Fix for array type labels in document display
Updates:
- Added if condition to array types in SchemaAttribute.java (this
ensures that array labels aren’t shown even when arrays are empty). This
addresses issue #432
- Also fixed a couple small css issues with arrays. Currently the array
item wrapper covers up the delete and arrow buttons, preventing them
from being clicked by the user.

--- a/nunaliit2-js/src/main/js/nunaliit2/css/basic/n2.schema.css
+++ b/nunaliit2-js/src/main/js/nunaliit2/css/basic/n2.schema.css
@@ -8,6 +8,7 @@
 
 .n2schema_array_item {
 	position: relative;
+	min-height: 40px;
 }
 
 .n2schema_array_add, .n2schema_array_item_delete, .n2schema_array_item_down {
@@ -56,12 +57,11 @@
 }
 
 .n2schema_array_item_wrapper {
-	position: absolute:
+	position: absolute;
 	left: 0px;
 	right: 16px;
 	top: 0px;
 	bottom: 0px;
-	min-height: 40px;
 }
 
 .n2schema_referenceDelete {
